Program section finished

--- a/README
+++ b/README
@@ -1,2 +1,13 @@
 https://material-ui.com/ru/components/cards/
 https://getbootstrap.com/docs/4.0/components/card/
+
+Идеи:
+
+1) зафиксировать фон
+2) по нажатию на афишу, показывать увеличенный размер
+
+
+Доработки:
+1) убрать jpeg файлы
+2) зачистить лишнее
+3) По клику по оверлею в меню - закрывать меню
