--- a/README
+++ b/README
@@ -11,3 +11,4 @@ https://getbootstrap.com/docs/4.0/components/card/
 1) убрать jpeg файлы
 2) зачистить лишнее
 3) По клику по оверлею в меню - закрывать меню
+4) Реализовать order
