Fix body background

--- a/README
+++ b/README
@@ -5,9 +5,8 @@ https://html5css.ru/edithtm/index.php
 
 Идеи:
 
-1) зафиксировать фон
-2) по нажатию на афишу, показывать увеличенный размер
-
+DONE 1) зафиксировать фон
+DONE 2) по нажатию на афишу, показывать увеличенный размер
 
 Доработки:
 1) убрать jpeg файлы
