--- a/README
+++ b/README
@@ -9,7 +9,7 @@ DONE 1) зафиксировать фон
 DONE 2) по нажатию на афишу, показывать увеличенный размер
 
 Доработки:
-1) убрать jpeg файлы
+DONE 1) убрать jpeg файлы
 2) зачистить лишнее
 3) По клику по оверлею в меню - закрывать меню
 4) Реализовать order
