--- a/README
+++ b/README
@@ -11,6 +11,6 @@ DONE 2) по нажатию на афишу, показывать увеличе
 Доработки:
 DONE 1) убрать jpeg файлы
 2) зачистить лишнее
-3) По клику по оверлею в меню - закрывать меню
 4) Реализовать order
-5) Сделать навигацию
+DONE 5) Сделать навигацию
+6) плавная навигация
