--- a/README
+++ b/README
@@ -14,3 +14,5 @@ DONE 1) убрать jpeg файлы
 4) Реализовать order
 DONE 5) Сделать навигацию
 6) плавная навигация
+7) Где карта сделать больший паддинг, чтобы скролить можно было на мал. разрешениях
+8) Сделать закрытие меню на мобилках при клике на пункт меню
