--- a/README
+++ b/README
@@ -14,5 +14,7 @@ DONE 1) убрать jpeg файлы
 4) Реализовать order
 DONE 5) Сделать навигацию
 DONE 6) плавная навигация
-7) Где карта сделать больший паддинг, чтобы скролить можно было на мал. разрешениях
+DONE 7) Где карта сделать больший паддинг, чтобы скролить можно было на мал. разрешениях
 DONE 8) Сделать закрытие меню на мобилках при клике на пункт меню
+DONE 9) Добавить все записи в json
+10) Кнопка показать всех после нажатия скрыть не меняет название
