Members section. Fix scroll during hide block

--- a/README
+++ b/README
@@ -17,4 +17,5 @@ DONE 6) плавная навигация
 DONE 7) Где карта сделать больший паддинг, чтобы скролить можно было на мал. разрешениях
 DONE 8) Сделать закрытие меню на мобилках при клике на пункт меню
 DONE 9) Добавить все записи в json
-10) Кнопка показать всех после нажатия скрыть не меняет название
+DONE 10) Кнопка показать всех после нажатия скрыть не меняет название
+11) Скролить после скрытия в начало блока
