--- a/README
+++ b/README
@@ -18,4 +18,7 @@ DONE 7) Где карта сделать больший паддинг, чтоб
 DONE 8) Сделать закрытие меню на мобилках при клике на пункт меню
 DONE 9) Добавить все записи в json
 DONE 10) Кнопка показать всех после нажатия скрыть не меняет название
-11) Скролить после скрытия в начало блока
+DONE 11) Скролить после скрытия в начало блока
+12) сжать все файлы на главной
+13) сделать бургер как в оригинале
+14) форму отправки отзывов + логика
