Add photos page

--- a/README
+++ b/README
@@ -22,3 +22,5 @@ DONE 11) Скролить после скрытия в начало блока
 12) сжать все файлы на главной
 13) сделать бургер как в оригинале
 14) форму отправки отзывов + логика
+15) Зачистить @@include('_popup.html',{})
+              @@include('_js.html',{})
