Fix burger appearance

--- a/README
+++ b/README
@@ -11,7 +11,6 @@ DONE 2) по нажатию на афишу, показывать увеличе
 Доработки:
 DONE 1) убрать jpeg файлы
 2) зачистить лишнее
-4) Реализовать order
 DONE 5) Сделать навигацию
 DONE 6) плавная навигация
 DONE 7) Где карта сделать больший паддинг, чтобы скролить можно было на мал. разрешениях
@@ -20,8 +19,8 @@ DONE 9) Добавить все записи в json
 DONE 10) Кнопка показать всех после нажатия скрыть не меняет название
 DONE 11) Скролить после скрытия в начало блока
 12) сжать все файлы на главной
-13) сделать бургер как в оригинале
-14) форму отправки отзывов + логика
-15) Зачистить @@include('_popup.html',{})
+DONE 13) сделать бургер как в оригинале
+14) форму отправки отзывов + логика ?
+15) ?Зачистить @@include('_popup.html',{})
               @@include('_js.html',{})
-16) LAZY-загрузки на страницу Photos
+16) ?LAZY-загрузки на страницу Photos ?
