--- a/README
+++ b/README
@@ -1,26 +1,6 @@
-https://material-ui.com/ru/components/cards/
-https://getbootstrap.com/docs/4.0/components/card/
+# Верстка сайта CERAMICFEST
 
-https://html5css.ru/edithtm/index.php
+#### Gulp - сборка
+> Используется Gulp 4
 
-Идеи:
-
-DONE 1) зафиксировать фон
-DONE 2) по нажатию на афишу, показывать увеличенный размер
-
-Доработки:
-DONE 1) убрать jpeg файлы
-2) зачистить лишнее
-DONE 5) Сделать навигацию
-DONE 6) плавная навигация
-DONE 7) Где карта сделать больший паддинг, чтобы скролить можно было на мал. разрешениях
-DONE 8) Сделать закрытие меню на мобилках при клике на пункт меню
-DONE 9) Добавить все записи в json
-DONE 10) Кнопка показать всех после нажатия скрыть не меняет название
-DONE 11) Скролить после скрытия в начало блока
-12) сжать все файлы на главной
-DONE 13) сделать бургер как в оригинале
-14) форму отправки отзывов + логика ?
-15) ?Зачистить @@include('_popup.html',{})
-              @@include('_js.html',{})
-16) ?LAZY-загрузки на страницу Photos ?
+[Демо сайта](https://www.ceramicfest.ru/2021/)
